# DataLiteracy

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  spinner_test.py
data/dwd/: .gitignore  stations.tsv
data/dwd/raw/: 1701993969.json  1702080600.json  1702167001.json  1702253401.json  1702339800.json  1702426200.json  1702512601.json  1702599000.json  1702685400.json  1702771800.json  1702858200.json  (+41 more)
data/map/: plz-5stellig.dbf  plz-5stellig.shx
docker/: Dockerfile.app  docker-compose.yaml
docs/code/: Doxyfile
docs/report/: bibliography.bib  icml2023.bst  icml2023.sty  notes.md  report.tex
playwright_scrape/: Containerfile  README.md  config.csv  playwright_scrape.service  playwright_scrape.timer  test_main.py
project/: __main__.py  requirements.txt
project/analysis/: pipeline.py
project/config/: analysation_scripts.yaml  crawler.config.yaml  crawler_test.config.yaml
project/convert/: converter.py  dwd_converter.py  utils.py
project/crawler/: __init__.py  base.py  dwd.py  manager.py  meteo_blue.py  wrapper.py
project/database/: database.py  tables.py
project/plot/: decorator.py  plot.py
project/process/: process.py
project/utils/: array.py  cast.py  decorator.py  download.py  file_system.py  parser.py  thread.py
studies/: 11_01_24_LD_fig_BaWu_stations.ipynb  11_01_24_LD_fig_BaWu_stations_20_01.ipynb  11_01_24_fig_LD_BaWu_stations.ipynb  13_01_24_RU_LD_Main.ipynb  13_01_24_RU_MAIN.ipynb  13_01_24_RU_glimps_into_data.ipynb  13_01_24_RU_permuation_test.ipynb  19_01_24_LD_hist_precipitation.ipynb  19_01_24_SM_accuracy_rain_at_all.py  23_02_24_SM_raw_data.py  26_01_24_SM_full_statistics_zero_threshold.py  28_01_24_SM_accuracy_rain_vary_period.py  29_01_2024_LD_fig_trend.ipynb  29_01_2024_fig_LD_accuracy.ipynb  29_01_2024_fig_LD_correlation_matrix.ipynb  29_01_2024_fig_LD_raw_data.ipynb  29_01_2024_fig_LD_trend.ipynb  29_01_2024_fig_raw_data_RU_LD.ipynb  29_01_24_RU_Fourier.ipynb  correlate_opendata_forecasts.py  download_dwd_opendata.py  extract_infromation.ipynb  first_glimps.ipynb  html.ipynb  response_wetter_online.html  robin.ipynb  stations.ipynb  tuebingen_dwd_stations_correlate.py
studies/html_snapshots/: response_daily.html  response_hourly.html  snapshot.html
studies/utils/: arithmetric.py  dwd_data.py  forecast.py  recent.py  setup_pyplot.py
(+318 files in other folders)
